# Connect4FilipStanislawski

./: README.md  REPORT.md  pyproject.toml
app/: ai.py  board.py  game.py  main.py
tests/: test_ai.py  test_board.py
