[project]
name = "connect4"
description = "Connect 4 AI using Minimax algorithm with Alpha-Beta pruning"
dynamic = ["version"]
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE.md" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report xml:coverage.xml --cov-report term"
testpaths = [
    "tests",
]
pythonpath = "."

[project.scripts]
connect4 = "app.main:main"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "alembic/*",
]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "Q",
    "I",
    "S",
    "N",
    "A",
    "FAST",
    "C4",
    "LOG",
    "RET",
    "SIM",
    "C90",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
